fix(ui): fix a horizontal text overflow/layout bug in the sidebar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -637,6 +637,7 @@ a.queryBar-logo {
     margin: 0 6px;
     position: relative;
     cursor: pointer;
+    word-break: break-word;
 }
 
 .UserItem .userItemNames .name {
